feat: fix some bugs